<resources>
    <string name="app_name">USGI-PULZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="otp_text">Please verify your mobile number</string>
    <string name="start_login">Login</string>
    <string name="start_signup">Sign Up</string>
    <string name="phone">Mobile number</string>
    <string name="email">Email</string>
    <string name="policyno">Policy No.</string>
    <string name="set_weekly_reminder">Set weekly reminder</string>
    <string name="set_monthly_reminder">Set Montly Reminder</string>
    <string name="document_type_head">Select Document Type</string>
    <string name="font_awesome_home">&#xf015;</string>
    <string name="font_awesome_locator">&#xf041;</string>
    <string name="font_awesome_gift">&#xf06b;</string>
    <string name="font_awesome_drawer">&#xf037;</string>
    <string name="font_awesome_cross">&#xf00d;</string>
    <string name="font_awesome_back">&#xf0a8;</string>
    <string name="font_awesome_market">&#xf07a;</string>
    <string name="font_awesome_calc">&#xf1ec;</string>
    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="shadow_description">Drop Shadow</string>
    <string name="load_more">Load More</string>
    <string name="pref_previously_started">First run</string>
    <string name="pref_previously_started1">First run1</string>
    <string name="pref_previously_started2">First run2</string>
    <string name="pref_previously_started3">First run3</string>
    <string name="registration_no">Registration Number</string>
    <string name="RTO_location_zone">RTO </string>
    <string name="manufacture_year">Manufacture Year</string>
    <string name="vehicle_registration_date">Date of Registration</string>
    <string name="manufacture_name">State Where Vehicle is Registered</string>
    <string name="vehicle_model">Model</string>
    <string name="city">City</string>
    <string name="email_id">Email Id</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Confirm">Confirm</string>
    <string name="policy_string">I understand and agree to the <font fgcolor="#293448">Privacy Policy</font></string>
    <string name="callTollFree">In case of any clarification or challenges, please contact us at <u><font color="#AC1931">contactus@universalsompo.com</font></u> or call us at our toll free number<u> <font color="#AC1931">1800 200 4030</font></u></string>
    <string name="term_condition"><u> Terms &amp; Conditions </u></string>
    <string name="term_condition1">I accept all the<u><font fgcolor="#2d9cdb"> Terms &amp; Conditions </font></u>related to my policy.</string>
    <string name="KnowMore"><u>Know More</u></string>
    <string name="UpgradePlan"><u>Upgrade Plan</u></string>
    <string name="AddOns"><u>AddOns</u></string>
    <string name="ViewDetails"><u> View Details </u></string>
    <string name="text"><u><font color="#AC1931">Click Here to Download policy schedule</font></u></string>
    <string name="text6"><font color="#000000">to view policy document and take print for future reference.</font></string>
    <string name="ShowBreakup"><u> Show Breakup </u></string>
    <string name="claim"><font color="#000000">Did you make a claim in your previous / existing policy ? </font><font color='#FFCC0022'>*</font></string>
    <string name="error">error</string>
    <string name="Suffering_illness">Are you or the proposed Insured Member suffering from any illness or disease at present or in the recent past?</string>
    <string name="HealthProblem"> Have you or the proposed insured member visited a doctor or medical professional for any health problem in the last 4 years?</string>
    <string name="MedicineTreatment">Are you or the proposed insured member taking any type of treatment or medicine?</string>
    <string name="HospitalizedTreatment">Have you or the proposed insured member been hospitalized for operation/medical treatment in the last 4 years?</string>
    <string name="Treatment">Have any of the person proposed to be insured ever suﬀered from or taken treatment, or hospitalized for or have been recommended to take investigations/ medication/surgery or undergone a surgery for any of the following – Diabetes; Hypertension; Ulcer/Cyst/Cancer; Cardiac Disorder; Kidney or Urinary Tract Disorder; Disorder of muscle/bone/joint; Respiratory disorder; Digestive tract or gastrointestinal disorder; Nervous System disorder; Mental Illness or disorder, HIV or AIDS?</string>
    <string name="Alcohol"> Are you consuming Alcohol? </string>
    <string name="Smoker"> Are you smoker? </string>
    <string name="Tobacco"> Are you consuming Tobacco/Gutkha/Pan Masal, etc?</string>
    <string name="Narcotic">  Are you consuming Narcotic Substances?</string>
    <string-array name="yearSelect">
        <item>Select</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
    </string-array>
    <string-array name="EngineProtector">
        <item>Select</item>
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
    <string name="gender">Gender</string>
    <string-array name="ChiGender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        
    </string-array>
    <string-array name="Salutation">
        <item>Select Salutation</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
    </string-array>
    <string-array name="Marital">
        <item>Marital Status</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
    <string-array name="age">
        <item>Select Age</item>
        <item>18yrs-35yrs</item>
        <item>36yrs-45yrs</item>
        <item>46yrs-50yrs</item>
        <item>51yrs-55yrs</item>
    </string-array>
    <string-array name="ChiAge">
        <item>Select Age</item>
        <item>18yrs-35yrs</item>
        <item>36yrs-45yrs</item>
        <item>46yrs-50yrs</item>
        <item>51yrs-55yrs</item>
        <item>56yrs-75yrs</item>
    </string-array>
    <string-array name="ChiID">
        <item>Select ID Type</item>
        <item>PAN Card</item>
        <item>Voter ID</item>
        
        <item>Passport</item>
        <item>Driving Licence</item>
        <item>Existing CKYC Number</item>
        <item>Reference Number</item>
    </string-array>
    <string-array name="shiAge">
        <item>Select Age</item>
        <item>18yrs-35yrs</item>
        <item>36yrs-45yrs</item>
        <item>46yrs-50yrs</item>
        <item>51yrs-55yrs</item>
        <item>56yrs-60yrs</item>
        <item>61yrs-65yrs</item>
    </string-array>
    <string-array name="occupation">
        <item>Occupation</item>
        <item>Doctors</item>
        <item>Lawyer</item>
        <item>Accounts</item>
        <item>Architects</item>
        <item>Consulting Engineers</item>
        <item>Teachers</item>
        <item>Bankers</item>
        <item>Housewifes</item>
        <item>Student</item>
        <item>Self Employed</item>
        <item>Salaried</item>
    </string-array>
    <string-array name="ft">
        <item>Ft</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="inches">inches</string>
    <string-array name="daily_exercise">
        <item>No Exercise</item>
        <item>Light Exercise</item>
        <item>Moderate Exercise</item>
        <item>Heavy Exercise</item>
        <item>Very Heavy Exercise</item>
    </string-array>
    <string-array name="any_disease">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="yesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="NoYes">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="for_self">
        <item>For Self</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="for_spouse">
        <item>For Spouse</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="subLimit">
        <item>Sub Limit Not Selected</item>
        <item>Sub Limit-A</item>
        <item>Sub Limit-B</item>
        <item>Sub Limit-C</item>
    </string-array>
    <string-array name="no_diabetes">
        <item>No Diabetes Selected</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="no_hypertension">
        <item>No Hypertension Selected</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="no_cholesterol">
        <item>No Cholesterol Selected</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="No_of_drinks">
        <item>Select</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="amount">
        <item>100000</item>
        <item>200000</item>
        <item>300000</item>
        <item>400000</item>
        <item>500000</item>
        <item>600000</item>
        <item>700000</item>
        <item>800000</item>
        <item>900000</item>
        <item>1000000</item>
    </string-array>
    <string-array name="deductible">
        <item>100000</item>
        <item>150000</item>
        <item>200000</item>
        <item>250000</item>
        <item>300000</item>
        <item>350000</item>
        <item>400000</item>
        <item>450000</item>
        <item>500000</item>
    </string-array>
    <string name="claimmanagementtext">Intimate claim online and track</string>
    <string name="claimmanagementtext1">claim status</string>
    <string name="claimmanagement">Claim Management</string>
    <string name="submit">Submit</string>
    <string name="category">Category</string>
    <string name="enter_height_in_feet1">Enter Height (in ft)</string>
    <string name="enter_height_in_inches1">Enter Height (in inch)</string>
    <string name="enter_weight_in_kg1">Enter Weight (in Kgs)</string>
    <string name="emergency_contact_person">Emergency Contact Person</string>
    <string name="emergency_contact_number">Emergency Contact</string>
    <string name="mandatory_field">Please enter mandatory fields</string>
    <string name="sub_category">Sub Category</string>
    <string name="doc_name">Document name</string>
    <string name="upload_document">Upload document</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="camera_image">Camera image</string>
    <string name="gallery_image">Gallery image</string>
    <string name="preview_image">Preview image</string>
    <string name="current_points">Current Points</string>
    <string name="blocked_points">Blocked Points</string>
    <string name="no_transaction_image">No transaction image</string>
    <string name="no_transaction">No Transaction</string>
</resources>