<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@drawable/dialog_bg2"
    android:orientation="vertical">

    <RelativeLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.universalsompo.meta.metaapp.utilities.CustomTextView1
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/mandatory_field"
            android:textColor="@color/lightblack"
            android:gravity="center"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:gravity="end"
            android:layout_alignParentRight="true"
            android:id="@+id/dismiss"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <ImageView
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/black">

        </ImageView>
        </LinearLayout>
    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:text="5"
            android:id="@+id/et_heightfeet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_height_in_feet1"
            android:textSize="@dimen/_12sdp"
            android:importantForAutofill="no" />

        <EditText
            android:text="5"
            android:id="@+id/et_heightinch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="2"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_height_in_inches1"
            android:textSize="@dimen/_12sdp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <EditText
        android:text="55"
        android:id="@+id/et_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/enter_weight_in_kg1"
        android:textSize="@dimen/_12sdp"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spin_dailyact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:entries="@array/daily_exercise"
        android:padding="@dimen/_5sdp" />

    <EditText
        android:text="Brother"
        android:id="@+id/et_emergency_contact_person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="text"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/emergency_contact_person"
        android:textSize="@dimen/_12sdp"
        android:importantForAutofill="no" />

    <EditText
        android:text="9999999999"
        android:id="@+id/et_emergency_contact_person_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="number"
        android:maxLength="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/emergency_contact_number"
        android:textSize="@dimen/_12sdp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/my_policy_tab_dark"
        android:padding="@dimen/_5sdp"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>