<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/slide2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claimmanagement"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:typeface="serif"
            android:layout_marginTop="@dimen/_25sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:text="@string/claimmanagementtext"
            android:textColor="@color/lightblack"
            android:typeface="serif"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/claimmanagementtext1"
            android:textColor="@color/lightblack"
            android:typeface="serif"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</RelativeLayout>