<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_submit_document"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:orientation="vertical">
            <com.universalsompo.meta.metaapp.utilities.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_12sdp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@color/lightish_grey"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/spn_category_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/drop_down_list1"
                    android:enabled="false"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/upload_sub_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:orientation="vertical">
            <com.universalsompo.meta.metaapp.utilities.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_category"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_12sdp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@color/lightish_grey"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/spn_sub_category_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/drop_down_list1"
                    android:enabled="false"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center|start"
                android:layout_weight="0.5">
                <com.universalsompo.meta.metaapp.utilities.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_name"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:id="@+id/doc_name"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp"
                    android:importantForAutofill="no" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/gallery_llayout_policy"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_white_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:background="@drawable/gallery_icon2"
                    android:contentDescription="@string/gallery_image" />

                <com.universalsompo.meta.metaapp.utilities.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera_llayout_policy"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_white_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:background="@drawable/camera_icon2"
                    android:contentDescription="@string/camera_image" />

                <com.universalsompo.meta.metaapp.utilities.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_12sdp"
                    android:typeface="serif" />
            </LinearLayout>
        </LinearLayout>

        <com.universalsompo.meta.metaapp.utilities.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/upload_document"
            android:textColor="@color/lightblack"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:typeface="serif" />

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/curved_rectangle_dashed">

            <ImageView
                android:id="@+id/img_uploaded_preview_policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/image_preview"
                android:scaleType="fitXY"
                android:contentDescription="@string/preview_image" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_submit_document"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer_shadow">
        <com.universalsompo.meta.metaapp.utilities.CustomTextView1
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:textColor="@color/lightblack"
            android:text="@string/submit" />
    </LinearLayout>
</RelativeLayout>