<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">
            <com.universalsompo.meta.metaapp.utilities.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_points"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:textSize="@dimen/_12sdp" />
            <com.universalsompo.meta.metaapp.utilities.CustomTextView1
                android:id="@+id/current_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">
            <com.universalsompo.meta.metaapp.utilities.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blocked_points"
                android:textColor="@color/red"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:textSize="@dimen/_12sdp" />
            <com.universalsompo.meta.metaapp.utilities.CustomTextView1
                android:id="@+id/blocked_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pastel_red"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/pastel_red" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/pastel_yellow" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/pastel_green" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/pastel_blue" />

    <LinearLayout
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:src="@drawable/no_transaction_image"
            android:contentDescription="@string/no_transaction_image" />
        <com.universalsompo.meta.metaapp.utilities.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_transaction"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:textColor="@color/lightblack" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction_history_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp" />
</LinearLayout>